--- a/src/FlowmakerService/appsettings.json
+++ b/src/FlowmakerService/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "nats": {
+    "hosts": [ "localhost:4222", "localhost:4223" ]
+  }
 }
