--- a/src/Flowmaker.Contracts/Flowmaker.Contracts.csproj
+++ b/src/Flowmaker.Contracts/Flowmaker.Contracts.csproj
@@ -5,6 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
+    <Folder Include="Nats\" />
   </ItemGroup>
 </Project>
