--- a/src2/flowmaker.web/flowmaker.web.csproj
+++ b/src2/flowmaker.web/flowmaker.web.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\flowmaker.components\flowmaker.components.csproj" />
     <ProjectReference Include="..\flowmaker.models\flowmaker.models.csproj" />
   </ItemGroup>
 
