--- a/src2/Flowmaker.Data/Flowmaker.Data.csproj
+++ b/src2/Flowmaker.Data/Flowmaker.Data.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Flowmaker.Domains\Flowmaker.Domains.csproj" />
+    <ProjectReference Include="..\Flowmaker.Entities\Flowmaker.Entities.csproj" />
   </ItemGroup>
 
 </Project>
